@@ -1,4 +1,6 @@
 3.0.3
+ * Ensure mutations are applied synchronously under lock contention
+   on tables with materialized views (CASSANDRA-10779)
  * Update CQL documentation (CASSANDRA-10899)
  * Check the column name, not cell name, for dropped columns when reading
    legacy sstables (CASSANDRA-11018)
